{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 162,
  "lineage": "81d538c3-0e15-032e-a1dd-8a7f891280be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04097eab37027dad1",
            "arn": "arn:aws:ec2:us-east-1:307946671918:elastic-ip/eipalloc-04097eab37027dad1",
            "association_id": "eipassoc-0bc30a1e6ad284306",
            "domain": "vpc",
            "id": "eipalloc-04097eab37027dad1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01ed2624f98b9315f",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-54-211-46-255.compute-1.amazonaws.com",
            "public_ip": "54.211.46.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sentiment-analyzer-nat-eip"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:internet-gateway/igw-0b72a7f762b91ac01",
            "id": "igw-0b72a7f762b91ac01",
            "owner_id": "307946671918",
            "tags": {
              "Name": "sentiment-analyzer-igw"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-igw"
            },
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04097eab37027dad1",
            "association_id": "eipassoc-0bc30a1e6ad284306",
            "connectivity_type": "public",
            "id": "nat-03ecdb9a663e8f6d0",
            "network_interface_id": "eni-01ed2624f98b9315f",
            "private_ip": "10.0.1.211",
            "public_ip": "54.211.46.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0396e0a247d6edd9c",
            "tags": {
              "Name": "sentiment-analyzer-nat"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:route-table/rtb-0d28741cfa7bcb79d",
            "id": "rtb-0d28741cfa7bcb79d",
            "owner_id": "307946671918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03ecdb9a663e8f6d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sentiment-analyzer-private-rt"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:route-table/rtb-0622ab9d4542316cc",
            "id": "rtb-0622ab9d4542316cc",
            "owner_id": "307946671918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b72a7f762b91ac01",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sentiment-analyzer-public-rt"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9cf132b63ab08cb",
            "route_table_id": "rtb-0d28741cfa7bcb79d",
            "subnet_id": "subnet-0c2d6f59e3d932a61"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c7d6fa9fd476dc3",
            "route_table_id": "rtb-0d28741cfa7bcb79d",
            "subnet_id": "subnet-039bfdab93addf314"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c382af0bb9b0de21",
            "route_table_id": "rtb-0622ab9d4542316cc",
            "subnet_id": "subnet-0396e0a247d6edd9c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07623e41c98e49770",
            "route_table_id": "rtb-0622ab9d4542316cc",
            "subnet_id": "subnet-0679b1db2ea37fc1b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:security-group/sg-086f4bd7280f2d45c",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086f4bd7280f2d45c",
            "ingress": [],
            "name": "sentiment-analyzer-lambda-sg",
            "name_prefix": "",
            "owner_id": "307946671918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sentiment-analyzer-lambda-sg"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:subnet/subnet-0c2d6f59e3d932a61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2d6f59e3d932a61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946671918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentiment-analyzer-private-subnet-1"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-private-subnet-1"
            },
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:subnet/subnet-039bfdab93addf314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039bfdab93addf314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946671918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentiment-analyzer-private-subnet-2"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-private-subnet-2"
            },
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:subnet/subnet-0396e0a247d6edd9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0396e0a247d6edd9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946671918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentiment-analyzer-public-subnet-1"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-public-subnet-1"
            },
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:subnet/subnet-0679b1db2ea37fc1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0679b1db2ea37fc1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946671918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentiment-analyzer-public-subnet-2"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-public-subnet-2"
            },
            "vpc_id": "vpc-046c60d13f1421305"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946671918:vpc/vpc-046c60d13f1421305",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5fa8fb8a193bd5f",
            "default_route_table_id": "rtb-019cd2db2f546e05a",
            "default_security_group_id": "sg-05479d448befae721",
            "dhcp_options_id": "dopt-07263164c318e580d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046c60d13f1421305",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019cd2db2f546e05a",
            "owner_id": "307946671918",
            "tags": {
              "Name": "sentiment-analyzer-vpc"
            },
            "tags_all": {
              "Name": "sentiment-analyzer-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}